VIC2 fixed font path load on LWR, added margin for omni vertical stepchart on mobile and quickexit styling

--- a/sfGpsDsAuVic2/main/default/staticresources/sfGpsDsAuVic2/omni-custom.scss
+++ b/sfGpsDsAuVic2/main/default/staticresources/sfGpsDsAuVic2/omni-custom.scss
@@ -477,6 +477,8 @@
 }
 
 .omniscript-side-content {
+  margin-bottom: 2rem;
+  
   .omni-stepchart-heading[omnistudio-omniscriptStepChart_omniscriptStepChart] {
     font-size: var(--rpl-type-size-2);
     font-weight: var(--rpl-type-weight-bold);
