--- a/sfGpsDsAuVic2/main/default/staticresources/sfGpsDsAuVic2/omnistudio.scss
+++ b/sfGpsDsAuVic2/main/default/staticresources/sfGpsDsAuVic2/omnistudio.scss
@@ -19,6 +19,7 @@
 
 .omniscript-side-content {
   margin-top: 0;
+  margin-bottom: 2rem;
 }
 
 .omniscript-body {
